--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 325] [Highest Citation: 183] [Total IF: 34.066] [Accepted: 14]</h3>
+<h3>[Total Citations: 330] [Highest Citation: 186] [Total IF: 34.066] [Accepted: 14]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
 <h3>Under Review: PR, TCSVT, TMM, etc.</h3>
 <h4>Journal Papers</h4>
@@ -213,6 +213,7 @@
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">#Equal Contribution. SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[Code]</a>
 		</td>
 	</tr>
 	<tr></tr>
