--- a/index_zw.html
+++ b/index_zw.html
@@ -139,7 +139,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 325] [最高引用: 183] [总影响因子: 34.066] [接收论文: 14]</h3>
+<h3>[总引用: 330] [最高引用: 186] [总影响因子: 34.066] [接收论文: 14]</h3>
 <h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, 等等。</h3>
 <h3>审稿中: PR, TCSVT, TMM, 等等。</h3>
 <h4>期刊论文</h4>
@@ -210,6 +210,7 @@
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">#共同一作。 SCI-1区。</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
