--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.06 and join CUHK-CMAI as a Postdoctoral Fellow in 2021.07.
 </p>
 
-<p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and images processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
+<p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
 
 <p>This web used to record my research achievement and also used to record my life experience.</p>
 
