--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <h2>Selected Publications </h2>
 <h3>[Total Citations: 338] [Highest Citation: 190] [Total IF: 34.066] [Accepted: 14]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: PR, TCSVT, TMM, etc.</h3>
+<h3>Under Review: ICCV, TIP, TCSVT, TMM, PR, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
