--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 <h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Outstanding PhD Graduate in Shanghai, Shanghai, 2021.</td></tr> 
 		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
@@ -142,7 +143,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 338] [Highest Citation: 190] [Total IF: 34.066] [Accepted: 14]</h3>
+<h3>[Total Citations: 344] [Highest Citation: 195] [Total IF: 34.066] [Accepted: 14]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
 <h3>Under Review: ICCV, TIP, TCSVT, TMM, PR, etc.</h3>
 <h4>Journal Papers</h4>
