--- a/index_zw.html
+++ b/index_zw.html
@@ -79,19 +79,20 @@
 <h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>研究奖学金计划, 香港中文大学, 2021.</td></tr> 
-		<tr><td>创智青年, 华东师范大学, 2020. (0.5%)</td></tr> 	
-		<tr><td>优秀学生, 华东师范大学, 2020. (3.0%)</td></tr> 	
+		<tr><td>上海市博士优秀毕业生称号, 上海市教委, 2021.</td></tr> 
+		<tr><td>研究奖学金资助, 香港中文大学, 2021.</td></tr> 
+		<tr><td>创智青年称号, 华东师范大学, 2020. (0.5%)</td></tr> 	
+		<tr><td>优秀学生称号, 华东师范大学, 2020. (3.0%)</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
 		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
 		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
 		<tr><td>ICCV 旅行资助, 2019.</td></tr> 	
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的感知赛道的全球第一名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"基于示例的RAW图像到RGB图像映射挑战赛"</a>的保真赛道的全球第二名, <b>(ICCV-AIM)</b>, 2019.</td></tr>
-		<tr><td>获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
+		<tr><td> 获得<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"阿里巴巴 - 优酷视频增强和超分辨率挑战赛"</a>全国第四名 和 “极客奖”, <b>(4/1514)</b>, 2019.</td></tr>
 		<tr><td> 获得<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"中国多媒体大会 - 去雾挑战赛"</a>全国第三名, 二等奖, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛"</a>全球第六名 和 “荣誉提名奖”, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
-		<tr><td>获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
+		<tr><td> 获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
 	</tbody>
 </table>
 
@@ -139,7 +140,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 338] [最高引用: 190] [总影响因子: 34.066] [接收论文: 14]</h3>
+<h3>[总引用: 344] [最高引用: 195] [总影响因子: 34.066] [接收论文: 14]</h3>
 <h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
 <h3>审稿中: ICCV、TIP、TCSVT、TMM、PR等。</h3>
 <h4>期刊论文</h4>
