--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Outstanding PhD Graduate in Shanghai, Shanghai, 2021.</td></tr> 
+		<tr><td>Outstanding PhD Graduates in Shanghai, Shanghai, 2021.</td></tr> 
 		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
