--- a/index_zw.html
+++ b/index_zw.html
@@ -140,9 +140,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 353] [最高引用: 201] [总影响因子: 34.066] [接收论文: 14]</h3>
-<h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
-<h3>审稿中: ICCV、TIP、TCSVT、TMM、PR等。</h3>
+<h3>[总引用: 355] [最高引用: 202] [总影响因子: 34.066] [接收论文: 15]</h3>
+<h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、PR、CVPRW、ICCVW、ICME、ACCV等。</h3>
+<h3>审稿中: ICCV、TIP、TCSVT、TMM等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -265,7 +265,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有225颗Star，51个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有226颗Star，51个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
