--- a/index_zw.html
+++ b/index_zw.html
@@ -79,7 +79,7 @@
 <h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>上海市博士优秀毕业生称号, 上海市教委, 2021.</td></tr> 
+		<tr><td>上海市优秀博士毕业生称号, 上海市教委, 2021.</td></tr> 
 		<tr><td>研究奖学金资助, 香港中文大学, 2021.</td></tr> 
 		<tr><td>创智青年称号, 华东师范大学, 2020. (0.5%)</td></tr> 	
 		<tr><td>优秀学生称号, 华东师范大学, 2020. (3.0%)</td></tr> 	
