--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 385] [Highest Citation: 223] [Total IF: 47.313] [Accepted: 16]</h3>
+<h3>[Total Citations: 388] [Highest Citation: 224] [Total IF: 47.313] [Accepted: 16]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
 <h3>Under Review: ICCV, TIP, TCSVT, TMM, etc.</h3>
 <h4>Journal Papers</h4>
@@ -394,13 +394,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> International Conference on Multimedia and Expo (ICME)</td>
+			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
 		<tr>
-			<td> British Machine Vision Conference (BMVC)</td>
+			<td> British Machine Vision Conference (BMVC-2020，2021)</td>
 		</tr>
 		<tr>
-			<td> International Conference on Pattern Recognition (ICPR)</td>
+			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
 		</tr>
 	</tbody>
 </table>
