--- a/index_zw.html
+++ b/index_zw.html
@@ -140,7 +140,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 385] [最高引用: 223] [总影响因子: 47.313] [接收论文: 16]</h3>
+<h3>[总引用: 388] [最高引用: 224] [总影响因子: 47.313] [接收论文: 16]</h3>
 <h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、PR、CVPRW、ICCVW、ICME、ACCV等。</h3>
 <h3>审稿中: ICCV、TIP、TCSVT、TMM等。</h3>
 <h4>期刊论文</h4>
@@ -390,13 +390,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> International Conference on Multimedia and Expo (ICME)</td>
+			<td> International Conference on Multimedia and Expo (ICME-2021)</td>
 		</tr>
 		<tr>
-			<td> British Machine Vision Conference (BMVC)</td>
+			<td> British Machine Vision Conference (BMVC-2020，2021)</td>
 		</tr>
 		<tr>
-			<td> International Conference on Pattern Recognition (ICPR)</td>
+			<td> International Conference on Pattern Recognition (ICPR-2020)</td>
 		</tr>
 	</tbody>
 </table>
