--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 413] [Highest Citation: 235] [Total IF: 47.313] [Accepted: 16]</h3>
+<h3>[Total Citations: 427] [Highest Citation: 241] [Total IF: 53.364] [Accepted: 17]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: ICCV, TIP, TCSVT, TMM, etc.</h3>
+<h3>Under Review: ICCV, TIP, TCSVT, ACMMM, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
