--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 429] [Highest Citation: 243] [Total IF: 53.364] [Accepted: 17]</h3>
-<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: ICCV, TIP, TCSVT, ACMMM, etc.</h3>
+<h3>[Total Citations: 432] [Highest Citation: 245] [Total IF: 53.364] [Accepted: 18]</h3>
+<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM、CVPRW, ICCVW, ICME, ACCV, etc.</h3>
+<h3>Under Review: ICCV, TIP, TCSVT, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
