--- a/index_zw.html
+++ b/index_zw.html
@@ -140,9 +140,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 429] [最高引用: 243] [总影响因子: 53.364] [接收论文: 17]</h3>
-<h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、PR、CVPRW、ICCVW、ICME、ACCV等。</h3>
-<h3>审稿中: ICCV、TIP、TCSVT、ACMMM等。</h3>
+<h3>[总引用: 432] [最高引用: 245] [总影响因子: 53.364] [接收论文: 18]</h3>
+<h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
+<h3>审稿中: ICCV、TIP、TCSVT等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
