--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, 李俊诚, 俊诚, 华东师范大学"> 
+<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, The Chinese University of Hong Kong, 李俊诚, 俊诚, 华东师范大学, 香港中文大学"> 
 <meta name="description" content="Juncheng Li's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -34,15 +34,15 @@
 					<h1>Juncheng Li (李俊诚)</h1> 
 				</div>
 
-				<h3> PhD Student </h3>
+				<h3> Postdoctoral Researcher </h3>
 				<p>
-					School of Computer Science and Technology<br>
-					East China Normal University<br>
-					3363 Zhongshan North Road,<br>
-					Shanghai, China, 200062.<br>
+					Center for Mathematical Artificial Intelligence (CMAI),<br>
+					Department of Mathematics,<br>
+					Shatin,<br>
+					New Territories, Hong Kong.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
-					Email: cvjunchengli@gmail.com 	       
+					Email: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk  	       
 				</p>
 
 				<br>
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.06 and join CUHK-CMAI as a Postdoctoral Fellow in 2021.07.
+	I am a Postdoctoral Researcher at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong. I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>.
 </p>
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
@@ -115,7 +115,7 @@
 <h2>Research Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">Coming Soon</div><br>
+		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021.07.05--Now</div><br>
 		Postdoctoral Fellow<br>
 		Topic:  Image/Video Compression & Medical Image Reconstruction & Image Restoration<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a><br>
@@ -219,11 +219,24 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
+		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
+		<font color="red">#Equal Contribution. SCI-1.</font><br> 
+		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
+		</td>
+	</tr>
 </tbody></table>
 
 <h4>Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
+
     <tr>	
 		<td width="206">
 		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -268,7 +281,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top CV conference. The most popular paper. 226 stars and 51 forks in Github.</font><br>
+		<font color="red">Top CV conference. The most popular paper. 228 stars and 51 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -278,88 +291,6 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
-
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/PFFNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ACCV_2018.pdf" target="_blank">Progressive Feature Fusion Network for Realistic Image Dehazing</a><br>
-		Kangfu Mei, Aiwen Jiang, <b>Juncheng Li</b>, and Mingwen Wang.
-		<p><em>Asian Conference on Computer Vision</em> (<i><b>ACCV</b></i>), 2018.<br>
-		<font color="red">The 3rd place in "ChinaMM2018 Image Dehazing Challenge"</font><br>
-		<a href="paper/ACCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[Code]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>	
-</tbody></table>
-
-
-<h4>Preprints Papers</h4></table>
-<table id="tbPublications" width="100%">
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/MSFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2103.13028.pdf" target="_blank">Lightweight Image Super-Resolution with Multi-scale Feature Interaction Network</a><br>
-		Zhengxue Wang, Guangwei Gao, <b>Juncheng Li</b>, Yi Yu, Huimin Lu
-		<p><em>arXiv preprint arXiv:2103.13028.</em><br>
-		<a href="https://arxiv.org/pdf/2103.13028.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2102.12135.pdf" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
-		Qiaosi Yi, <b>Juncheng Li</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
-		<p><em>arXiv preprint arXiv:2102.12135.</em><br>
-		<a href="https://arxiv.org/pdf/2102.12135.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-    
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background</a><br>
-		Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
-		<p><em>arXiv preprint arXiv:2101.01479.</em><br>
-		<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>	
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/A1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="https://arxiv.org/pdf/2006.13511.pdf" target="_blank">Disentangle Perceptual Learning through Online Contrastive Learning</a><br>
-		Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b>, Rui Huang
-		<p><em>arXiv preprint arXiv:2006.13511.</em><br>
-		<a href="https://arxiv.org/pdf/2006.13511.pdf", target="_blank">[Paper]</a>
-		</td>
-	</tr>
-
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>	
 </tbody></table>
 
 
@@ -591,7 +522,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; Juncheng Li | Last updated: 2021-01-09
+&copy; Juncheng Li | Last updated: 2021-07-06
 </center>
 </p>
 
