--- a/index_zw.html
+++ b/index_zw.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, 李俊诚, 俊诚, 华东师范大学"> 
+<meta name="keywords" content="Juncheng Li, Li Juncheng, Juncheng, ECNU, East China Normal University, The Chinese University of Hong Kong, 李俊诚, 俊诚, 华东师范大学, 香港中文大学"> 
 <meta name="description" content="李俊诚的主页">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
@@ -34,15 +34,15 @@
 					<h1>李俊诚 (Li Juncheng)</h1> 
 				</div>
 
-				<h3> 博士研究生 </h3>
+				<h3> 博后研究员 </h3>
 				<p>
-					计算机科学与技术学院<br>
-					华东师范大学<br>
-					中山北路3663号,<br>
-					上海, 中国, 200062.<br>
+					数学人工智能研究中心（CMAI）<br>
+					数学系<br>
+					沙田,<br>
+					新界, 香港.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
-					邮箱: cvjunchengli@gmail.com 	       
+					邮箱: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk 	       
 				</p>
 
 				<br>
@@ -67,7 +67,7 @@
 
 <h2>简介</h2>
 <p>
-	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.06 毕业，并于2021.07加入香港中文大学人工智能研究中心担任博后研究员。
+	我是香港中文大学数学人工智能研究中心的一名博后研究员。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。
 </p>
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
@@ -216,7 +216,22 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
+		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
+		<font color="red">#共同一作。 SCI-1区。</font><br> 
+		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
     <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h4>会议论文</h4></table>
@@ -265,7 +280,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有226颗Star，51个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有228颗Star，51个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -274,89 +289,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
-	
-
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/PFFNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ACCV_2018.pdf" target="_blank">Progressive Feature Fusion Network for Realistic Image Dehazing</a><br>
-		Kangfu Mei, Aiwen Jiang, <b>Juncheng Li</b>, and Mingwen Wang.
-		<p><em>Asian Conference on Computer Vision</em> (<i><b>ACCV</b></i>), 2018.<br>
-		<font color="red">中国多媒体大会（ChinaMM）图像去雾挑战赛第三名模型。</font><br>
-		<a href="paper/ACCV_2018.pdf", target="_blank">[论文]</a>
-        <a href="https://github.com/MIVRC/PFFNet-PyTorch", target="_blank">[代码]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>	
-</tbody></table>
-
-
-<h4>预印本论文</h4></table>
-<table id="tbPublications" width="100%">
-
-		<tr>	
-			<td width="206">
-			<img src="./indexpics/MSFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-			</td>		
-			<td> <a href="https://arxiv.org/pdf/2103.13028.pdf" target="_blank">Lightweight Image Super-Resolution with Multi-scale Feature Interaction Network</a><br>
-			Zhengxue Wang, Guangwei Gao, <b>Juncheng Li</b>, Yi Yu, Huimin Lu
-			<p><em>arXiv preprint arXiv:2103.13028.</em><br>
-			<a href="https://arxiv.org/pdf/2103.13028.pdf", target="_blank">[Paper]</a>
-			</td>
-		</tr>
-	
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
-	
-		<tr>	
-			<td width="206">
-			<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-			</td>		
-			<td> <a href="https://arxiv.org/pdf/2102.12135.pdf" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
-			Qiaosi Yi, <b>Juncheng Li</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
-			<p><em>arXiv preprint arXiv:2102.12135.</em><br>
-			<a href="https://arxiv.org/pdf/2102.12135.pdf", target="_blank">[Paper]</a>
-			</td>
-		</tr>
-		
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>
-	
-		<tr>	
-			<td width="206">
-			<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-			</td>		
-			<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background</a><br>
-			Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
-			<p><em>arXiv preprint arXiv:2101.01479.</em><br>
-			<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[Paper]</a>
-			</td>
-		</tr>
-	
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>	
-	
-		<tr>	
-			<td width="206">
-			<img src="./indexpics/A1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-			</td>		
-			<td><a href="https://arxiv.org/pdf/2006.13511.pdf" target="_blank">Disentangle Perceptual Learning through Online Contrastive Learning</a><br>
-			Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b>, Rui Huang
-			<p><em>arXiv preprint arXiv:2006.13511.</em><br>
-			<a href="https://arxiv.org/pdf/2006.13511.pdf", target="_blank">[Paper]</a>
-			</td>
-		</tr>
-	
-		<tr></tr>
-		<tr></tr>
-		<tr></tr>	
+	<tr></tr>	
 </tbody></table>
 
 
@@ -588,7 +521,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; 李俊诚 | 最后更新: 2021-01-09
+&copy; 李俊诚 | 最后更新: 2021-07-06
 </center>
 </p>
 
