--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
 
 				<h3> Postdoctoral Researcher </h3>
 				<p>
-					Center for Mathematical Artificial Intelligence (CMAI),<br>
-					Department of Mathematics,<br>
-					Shatin,<br>
-					New Territories, Hong Kong.<br>
+					Center for Mathematical Artificial Intelligence (CMAI), Department of Mathematics,<br>
+					Shatin, New Territories, Hong Kong.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
 					Email: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk  	       
