--- a/index_zw.html
+++ b/index_zw.html
@@ -36,10 +36,8 @@
 
 				<h3> 博后研究员 </h3>
 				<p>
-					数学人工智能研究中心（CMAI）<br>
-					数学系<br>
-					沙田,<br>
-					新界, 香港.<br>
+					数学人工智能研究中心（CMAI），数学系<br>
+					沙田，新界，香港.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
 					邮箱: cvjunchengli@gmail.com  &  junchengli@math.cuhk.edu.hk 	       
