--- a/index_zw.html
+++ b/index_zw.html
@@ -498,7 +498,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td><i><b>中国</b></i>: 香港, 澳门, 北京, 上海, 广州, 深圳, 珠海，保定, 合肥, 天津, 青岛, 杭州, 嘉兴, 南京, 苏州, 扬州, 连云港, 淮安, 无锡, 沈阳, 长沙, 武汉, 南昌, 九江, 上饶, 景德镇, 厦门, 福州, 泉州, 莆田。</td>
+			<td><i><b>中国</b></i>: 香港, 澳门, 北京, 上海, 广州, 深圳, 珠海, 保定, 合肥, 天津, 青岛, 杭州, 嘉兴, 南京, 苏州, 扬州, 连云港, 淮安, 无锡, 沈阳, 长沙, 武汉, 南昌, 九江, 上饶, 景德镇, 厦门, 福州, 泉州, 莆田。</td>
 		</tr>
 		<tr>
 			<td><i><b>德国</b></i>: 慕尼黑</td>
