--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<h1>Juncheng Li (李俊诚)</h1> 
 				</div>
 
-				<h3> Postdoctoral Researcher </h3>
+				<h3> Postdoctoral Fellow </h3>
 				<p>
 					Center for Mathematical Artificial Intelligence (CMAI), Department of Mathematics,<br>
 					Shatin, New Territories, Hong Kong.<br>
