--- a/index_zw.html
+++ b/index_zw.html
@@ -68,7 +68,7 @@
 	我是香港中文大学数学人工智能研究中心的一名博后研究员。我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。
 </p>
 
-<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
+<p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾和医学图像重建）中的应用。</p>
 
 <p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
 
