--- a/index_zw.html
+++ b/index_zw.html
@@ -138,9 +138,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 442] [最高引用: 252] [总影响因子: 53.364] [接收论文: 18]</h3>
-<h3>已接收: ECCV, TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
-<h3>审稿中: ICCV、TIP、TCSVT等。</h3>
+<h3>[总引用: 442] [最高引用: 253] [总影响因子: 53.364] [接收论文: 18]</h3>
+<h3>已接收: ECCV、 TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
+<h3>审稿中: ICCV、TIP、TCSVT、TCYB 等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
