--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 442] [Highest Citation: 252] [Total IF: 53.364] [Accepted: 18]</h3>
-<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM、CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: ICCV, TIP, TCSVT, etc.</h3>
+<h3>[Total Citations: 443] [Highest Citation: 252] [Total IF: 53.364] [Accepted: 18]</h3>
+<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
+<h3>Under Review: ICCV, TIP, TCSVT, TCYB, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
