--- a/index.html
+++ b/index.html
@@ -75,6 +75,53 @@
 <p>This web used to record my research achievement and also used to record my life experience.</p>
 
 
+<h2>News</h2>
+
+<table style="border-spacing:2px">
+	<h3>Submit List, 4 Papers</h3>
+	<tbody>
+		<tr><td>One paper has been submitted to IEEE TCSVT.</td></tr> 
+		<tr><td>One paper has been submitted to IEEE TCYB.</td></tr> 
+		<tr><td>One paper has been submitted to IEEE TIP.</td></tr> 
+		<tr><td>One paper has been submitted to IEEE TCSVT.</td></tr> 
+	</tbody>
+
+
+	<h3>2021-Now, 6 Papers</h3>
+	<tbody>
+		<tr><td>One paper has been accepted by ICCV 2021.</td></tr> 
+		<tr><td>One paper has been accepted by ACM MM 2021.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE TMM 2021.</td></tr> 
+		<tr><td>One paper has been accepted by PR 2021.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE TMM 2021.</td></tr> 
+		<tr><td>One paper has been accepted by ICME 2021.</td></tr> 	
+	</tbody>
+
+	<h3>2020-2021, 5 Papers</h3>
+	<tbody>
+		<tr><td>One paper has been accepted by IEEE TCSVT 2020.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE TMM 2020.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE Access 2021.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE TNNLS 2020.</td></tr> 
+		<tr><td>One paper has been accepted by IEEE TIP 2020.</td></tr> 	
+	</tbody>
+
+	<h3>2019-2020, 4 Papers</h3>
+	<tbody>
+		<tr><td>Three papers have been accepted by ICCV Workshop 2019.</td></tr> 
+		<tr><td>One paper has been accepted by IET Image Processing 2019.</td></tr> 	
+	</tbody>
+
+	<h3>2018-2019, 4 Papers</h3>
+	<tbody>
+		<tr><td>One paper has been accepted by ICONIP 2018.</td></tr> 
+		<tr><td>One paper has been accepted by ACCV 2018.</td></tr> 
+		<tr><td>One paper has been accepted by ECCV 2018.</td></tr> 
+		<tr><td>One paper has been accepted by CVPR Workshop 2018.</td></tr> 	
+	</tbody>
+</table>
+
+
 <h2>Honors &amp; Awards</h2>
 
 <h3>2016-Now (Graduate Period)</h3>
@@ -141,9 +188,9 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 443] [Highest Citation: 252] [Total IF: 53.364] [Accepted: 18]</h3>
-<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: ICCV, TIP, TCSVT, TCYB, etc.</h3>
+<h3>[Total Citations: 443] [Highest Citation: 252] [Total IF: 53.364] [Accepted: 19]</h3>
+<h3>Accepted: ICCV, ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
+<h3>Under Review: TIP, TCSVT, TCYB, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
