--- a/index_zw.html
+++ b/index_zw.html
@@ -72,6 +72,53 @@
 
 <p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
 
+<h2>最新消息</h2>
+
+<table style="border-spacing:2px">
+	<h3>提交列表，共4篇</h3>
+	<tbody>
+		<tr><td>一篇论文已经提交到 IEEE TCSVT.</td></tr> 
+		<tr><td>一篇论文已经提交到 IEEE TCYB.</td></tr> 
+		<tr><td>一篇论文已经提交到 IEEE TIP.</td></tr> 
+		<tr><td>一篇论文已经提交到 IEEE TCSVT.</td></tr> 
+	</tbody>
+
+
+	<h3>2021-Now，共6篇</h3>
+	<tbody>
+		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 ACM MM 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 PR 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 ICME 2021 接收.</td></tr> 	
+	</tbody>
+
+	<h3>2020-2021，共5篇</h3>
+	<tbody>
+		<tr><td>一篇论文已被 IEEE TCSVT 2020 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TMM 2020 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE Access 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TNNLS 2020 接收.</td></tr> 
+		<tr><td>一篇论文已被 IEEE TIP 2020 接收.</td></tr> 	
+	</tbody>
+
+	<h3>2019-2020，共4篇</h3>
+	<tbody>
+		<tr><td>三篇论文已被 ICCV Workshop 2019 接收.</td></tr> 
+		<tr><td>一篇论文已被 IET Image Processing 2019 接收.</td></tr> 	
+	</tbody>
+
+	<h3>2018-2019, 共4篇</h3>
+	<tbody>
+		<tr><td>一篇论文已被 ICONIP 2018 接收.</td></tr> 
+		<tr><td>一篇论文已被 ACCV 2018 接收.</td></tr> 
+		<tr><td>一篇论文已被 ECCV 2018 接收.</td></tr> 
+		<tr><td>一篇论文已被 CVPR Workshop 2018 接收.</td></tr> 	
+	</tbody>
+</table>
+
+
 <h2>荣誉 &amp; 奖项</h2>
 
 <h3>2016-至今 (研究生期间)</h3>
@@ -138,9 +185,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 442] [最高引用: 253] [总影响因子: 53.364] [接收论文: 18]</h3>
-<h3>已接收: ECCV、 TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
-<h3>审稿中: ICCV、TIP、TCSVT、TCYB 等。</h3>
+<h3>[总引用: 442] [最高引用: 253] [总影响因子: 53.364] [接收论文: 19]</h3>
+<h3>已接收: ICCV、ECCV、 TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
+<h3>审稿中: TIP、TCSVT、TCYB 等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
