--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </table>
 
 <h3>2021-Now, 6 Papers</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper has been accepted by ICCV 2021.</td></tr> 
 		<tr><td>One paper has been accepted by ACM MM 2021.</td></tr> 
@@ -100,7 +100,7 @@
 </table>
 
 <h3>2020-2021, 5 Papers</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper has been accepted by IEEE TCSVT 2020.</td></tr> 
 		<tr><td>One paper has been accepted by IEEE TMM 2020.</td></tr> 
@@ -111,7 +111,7 @@
 </table>
 
 <h3>2019-2020, 4 Papers</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>Three papers have been accepted by ICCV Workshop 2019.</td></tr> 
 		<tr><td>One paper has been accepted by IET Image Processing 2019.</td></tr> 	
@@ -119,7 +119,7 @@
 </table>
 
 <h3>2018-2019, 4 Papers</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper has been accepted by ICONIP 2018.</td></tr> 
 		<tr><td>One paper has been accepted by ACCV 2018.</td></tr> 
