--- a/index_zw.html
+++ b/index_zw.html
@@ -85,7 +85,7 @@
 </table>
 
 <h3>2021-Now，共6篇</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 ACM MM 2021 接收.</td></tr> 
@@ -116,7 +116,7 @@
 </table>
 
 <h3>2018-2019, 共4篇</h3>
-<table style="border-spacing:2px"></table>
+<table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已被 ICONIP 2018 接收.</td></tr> 
 		<tr><td>一篇论文已被 ACCV 2018 接收.</td></tr> 
