--- a/index_zw.html
+++ b/index_zw.html
@@ -72,6 +72,16 @@
 
 <p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
 
+<h2>团队成员</h2>
+<table style="border-spacing:2px">
+	<tbody>
+		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> 梅康夫</a></b>, 博士研究生, 霍普金斯大学.</td></tr> 
+		<tr><td><b> <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank"> 易侨斯</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
+		<tr><td><b> <a href="", target="_blank"> 戴沁妍</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
+		<tr><td><b> <a href="", target="_blank"> 胡乐</a></b>, 博士研究生, 华东师范大学.</td></tr> 
+	</tbody>
+</table>
+
 <h2>最新消息</h2>
 
 <h3>提交列表，共4篇</h3>
